# job-search

./: .env.example  .gitignore  CLAUDE.md  TODO.md  main.py  pyproject.toml
.claude/skills/job-application/: SKILL.md
claw_sync/: .env.example  README.md  crontab.example  push_to_claw.sh  run_and_push.sh
tools/: README.md  apps_script_tracker.js  auto_apply.py  clearancejobs_scraper.py  close_tabs.py  job_scraper.py  notify.py  sheets_tracker.py  youtube_transcript.py
workflows/: README.md  close_tabs.md  job_application.md  niche_demand_validation.md
